--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - docker build -t wojtasowaty/react-test -f ./client/Dockerfile.dev ./client
 
 scirpt: 
-  - dokcer run -e CI=true wojtasowaty/react-test npm test
+  - docker run -e CI=true wojtasowaty/react-test npm test
 
 
 after_success:
