--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,16 @@ after_success:
   - docker push wojtasowaty/multi-nginx 
   - docker push wojtasowaty/multi-server
   - docker push wojtasowaty/multi-worker
+
+
+deploy:
+  provider: elasticbeanstalk
+  region: 'us-east-1'
+  app: 'multi-docker'
+  env: 'Multidocker-env'
+  bucket_name: 'elasticbeanstalk-us-east-1-761151564817'
+  bucket_path: 'docker-multi'
+  on:
+  branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
